# omnibus

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  Justfile  README.md  ROADMAP.md  flake.nix  logs.txt  logs2.txt  process-compose.yaml
.claude/: launch.json
.claude/rules/: 01-dev-environment.md  02-error-handling.md  03-unit-testing.md  04-playwright.md  05-pull-requests.md  98-keep-skills-fresh.md  99-end-of-session.md
.claude/skills/: add-backend-route.md  add-playwright-flow.md  jj-advanced.md  jj-basics.md  jj-workspaces.md
.claude/skills/add-backend-route/: SKILL.md
.claude/skills/add-playwright-flow/: SKILL.md
.claude/skills/jj-advanced/: SKILL.md
.claude/skills/jj-basics/: SKILL.md
.claude/skills/ui-validate/: SKILL.md
.direnv/: flake-profile-18-link  flake-profile-3-link  flake-profile-5-link  flake-profile-9-link
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: e2e.yml  rust.yml
.zellij/: layout.kdl
db/: Cargo.toml
db/migrations/: 0001_initial_schema.sql  0002_normalized_schema.sql  0004_auth.sql  0004_fts5.sql  0006_books_accent.sql  0007_metadata_overrides.sql
db/src/: auth.rs  ebook.rs  indexer.rs  lib.rs  library_layout.rs  queries.rs  thumbs.rs  worker.rs
db/tests/: fixture_epubs.rs  public_domain_epubs.rs
docs/: ROADMAP.md  calibre-web-analysis.md  roadmap_v2.md
docs/audiobookshelf-inspection/: 0-overview.md  1-omnibus-state.md  2-feature-inventory.md  3-performance-pain-points.md  4-dioxus-rust-wins.md  5-schema-details.md  6-api-surface.md  7-recommendations.md
docs/calibre-inspection/: 0-overview.md  1-omnibus-state.md  2-feature-inventory.md  3-performance-pain-points.md  4-dioxus-rust-wins.md  5-schema-details.md  6-api-surface.md  7-recommendations.md
docs/design/: atrium-design-system.md
docs/qa/: qa-report-2026-04-26.md
docs/roadmap/: 0-0-summary.md  0-1-schema-refactor.md  0-2-migrations.md  0-3-auth.md  0-4-fts5.md  0-5-background-worker.md  0-6-library-filesystem.md  0-7-route-authorization.md  1-1-search.md  1-10-palette-discovery-link.md  1-11-author-profiles.md  1-12-browse-authors-series.md  1-2-thumbnails.md  1-3-library-views.md  1-4-book-detail.md  1-5-advanced-search.md  1-6-auth-ui.md  1-7-atrium-design-system.md  1-8-discovery-pages.md  1-9-themes-and-density.md  2-1-progress-sync.md  2-2-epub-reader.md  2-3-audiobook-player.md  3-1-libraries.md  3-2-ratings-journaling.md  3-3-suggestions.md  3-4-stats.md  3-5-shared-shelves.md  4-1-kobo-sync.md  4-2-opds.md  4-3-kindle.md  5-1-metadata-edit.md  5-2-observability.md  5-3-uploads.md  5-4-admin-panel.md  5-5-format-conversion.md  5-6-admin-health.md  5-7-journal-quote-cards.md  5-8-opf-export.md  6-1-mobile.md
frontend/: Cargo.toml
frontend/assets/: atrium.css
frontend/migrations/: 0003_drop_legacy_tables.sql
frontend/src/: data.rs  db.rs  ebook.rs  ebook_cache.rs  indexer.rs  lib.rs  rpc.rs  scanner.rs  view_prefs.rs
frontend/src/components/: atrium.rs  bottom_nav.rs  format_switcher.rs  mod.rs  search_palette.rs  top_nav.rs
frontend/src/components/auth/: banner.rs  field.rs  mod.rs  shell.rs  strength.rs
frontend/src/pages/: auth.rs  author.rs  book_detail.rs  landing.rs  metadata_edit.rs  mod.rs  series.rs  settings.rs  tag_cloud.rs
mobile/: Cargo.toml  Dioxus.toml
mobile/src/: main.rs
mobile/src/components/: mod.rs  nav.rs
mobile/src/pages/: landing.rs  settings.rs
scripts/: dev-server-up.sh
server/: Cargo.toml
server/src/: backend.rs  db.rs  lib.rs  main.rs  scanner.rs
server/src/auth/: boot.rs  csrf.rs  extractor.rs  gate.rs  handlers.rs  mod.rs  rate_limit.rs  strategy.rs  test_support.rs
server/src/frontend/: mod.rs
server/src/frontend/components/: mod.rs  nav.rs
server/src/frontend/pages/: landing.rs  mod.rs  settings.rs
server/src/worker/: mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: db.rs  frontend.rs  lib.rs  main.rs
test-data/epubs/: README.md
test-data/epubs/publicDomain/: dracula.epub  great_gatsby.epub
test_data/epubs/: README.md
test_data/epubs/public_domain/: charles_frohman.epub  gogol_dramatische_werke.epub  mariucha.epub  middlemarch.epub  moby_dick.epub  picture_of_dorian_gray.epub  room_with_a_view.epub  sir_richard_calmady.epub  tribes_and_castes_of_india.epub  woordenlijst_nederlandsche_taal.epub  works_of_george_gillespie.epub  wuthering_heights.epub
tests/: e2e_playwright.rs
ui_tests/playwright/: .gitignore  globalSetup.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
ui_tests/playwright/tests/: counter.spec.ts  landing.spec.ts  settings.spec.ts
ui_tests/playwright/tests/fixtures/: epubs.ts  test.ts
ui_tests/playwright/tests/flows/: auth.spec.ts  book_detail.spec.ts  counter.spec.ts  discovery.spec.ts  landing.spec.ts  metadata_edit.spec.ts  search-palette.spec.ts  search.spec.ts  settings.spec.ts  theme_toggle.spec.ts  thumbnails.spec.ts
ui_tests/playwright/tests/utils/: api.ts  auth.ts  ebooks.ts  nav.ts  seed.ts
ui_tests/playwright/tools/: make_epub.ts
