[package]
name = "omnibus"
version = "0.1.0"
edition = "2021"

[features]
default = []
e2e = ["dep:playwright"]

[dependencies]
axum = "0.7"
dioxus = { version = "0.7", features = ["server"] }
dioxus-router = "0.7"
dioxus-ssr = "0.7"
playwright = { version = "0.0.20", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tower = "0.5"
