[package]
name = "omnibus-db"
version = "0.1.0"
edition = "2021"

# Server-side data layer: schema migrations, SQLite pool init, query layer,
# and the indexing pipeline (file scanner → ebook metadata extraction →
# atomic per-library upsert). Consumed by both `server/` (axum handlers) and
# `frontend/` (Dioxus server functions under the `server` feature).

[dependencies]
omnibus-shared = { path = "../shared" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
anyhow = "1"
thiserror = "1"
epub = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# F0.6 library filesystem: ASCII-fold author/title slugs ("Café" → "cafe",
# "東京" → "dong-jing") so canonical-layout folder names stay tool-agnostic.
deunicode = "1"

# F0.6 library filesystem: structured logging when sidecar materialization
# falls back to embedded covers (read-only fs, etc.). Subscriber is set up
# by the binary; library code only emits events.
tracing = "0.1"

# Auth (F0.3). Argon2id password hashing, CSPRNG token generation, SHA-256
# of the raw token for at-rest storage, base64url for wire-format tokens.
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
