[package]
name = "omnibus-db"
version = "0.1.0"
edition = "2021"

# Server-side data layer: schema migrations, SQLite pool init, query layer,
# and the indexing pipeline (file scanner → ebook metadata extraction →
# atomic per-library upsert). Consumed by both `server/` (axum handlers) and
# `frontend/` (Dioxus server functions under the `server` feature).

[dependencies]
omnibus-shared = { path = "../shared" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
anyhow = "1"
thiserror = "1"
epub = "2"
serde.workspace = true
serde_json.workspace = true

# F0.6 library filesystem: ASCII-fold author/title slugs ("Café" → "cafe",
# "東京" → "dong-jing") so canonical-layout folder names stay tool-agnostic.
deunicode = "1"

# F0.6 library filesystem: structured logging when sidecar materialization
# falls back to embedded covers (read-only fs, etc.). Subscriber is set up
# by the binary; library code only emits events.
tracing.workspace = true

# Auth (F0.3). Argon2id password hashing, CSPRNG token generation, SHA-256
# of the raw token for at-rest storage, base64url for wire-format tokens.
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

# F1.2 thumbnail pipeline: decode EPUB covers (JPEG/PNG/WebP) and re-encode
# as WebP at multiple sizes. Only the three listed formats are enabled to keep
# compile times and binary size down.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# HTML sanitization for EPUB description fields (issue #62). OPF
# `<dc:description>` is often HTML; we sanitize server-side with a strict
# allowlist so the `book_detail` page can render it via `dangerous_inner_html`
# without exposing XSS. Done at read time in `get_book` so existing rows in
# the DB are sanitized without a reindex.
ammonia = "4"

[dev-dependencies]
tempfile.workspace = true
