[package]
name = "omnibus-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["fullstack"] }
dioxus-router = "0.7"
omnibus-shared = { path = "../shared" }
omnibus-db = { path = "../db", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
gloo-net = { version = "0.6", default-features = false, features = ["http", "json"], optional = true }
# sqlx + tokio are needed at the type level by rpc.rs when building server
# functions (PoolExt = Extension<SqlitePool>, #[tokio::spawn] for reindex).
# Kept as optional deps enabled only by the `server` feature. Tokio is
# pulled in with no default features so each consuming feature opts into
# only what it needs — mobile gets `sync` for `watch`, server gets the
# multi-thread runtime + macros for `#[tokio::main]`-style usage in rpc.rs.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"], optional = true }
tokio = { version = "1", default-features = false, optional = true }

[features]
default = []
# Web client (WASM): uses dioxus-fullstack server-function client stubs.
web = ["dioxus/web", "dep:gloo-net", "dep:serde_json"]
# Native mobile client: talks to `/api/*` REST routes via reqwest.
# tokio is enabled for `sync::watch` — used by `data::token_store` to
# notify the UI when auth state changes so screens redirect to /login
# without a polling loop. No runtime/macro features are pulled in here:
# reqwest's own runtime is sufficient and `watch` is sync-only.
mobile = ["dep:reqwest", "dep:serde_json", "dep:tokio", "tokio/sync"]
# Server-function bodies: compiles the server-side halves of the #[get]/#[post]
# functions in rpc.rs against the real DB layer. Used by `server/` when
# building the fullstack native binary. The DB work lives in `omnibus-db`;
# this feature just pulls it in alongside dioxus/server's server-fn codegen.
#
# NOTE: must be named literally `server` — the dioxus_fullstack_macro
# hardcodes `#[cfg(feature = "server")]` inside the expanded #[get]/#[post]
# bodies, so renaming it (e.g. to `server-fns`) makes the server halves
# compile to empty stubs.
server = [
    "dioxus/server",
    "dep:omnibus-db",
    "dep:sqlx",
    "dep:tokio",
    "tokio/macros",
    "tokio/rt-multi-thread",
]
