[package]
name = "omnibus-mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["mobile"] }
dioxus-router = "0.7"
omnibus-shared = { path = "../shared" }
omnibus-frontend = { path = "../frontend", features = ["mobile"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
