[package]
name = "omnibus-mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["mobile"] }
dioxus-router = "0.7"
omnibus-shared = { path = "../shared" }
omnibus-frontend = { path = "../frontend", features = ["mobile"] }
reqwest.workspace = true
serde_json.workspace = true
