[package]
name = "omnibus"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
dioxus = { version = "0.7", features = ["server"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dioxus-router = "0.7"
dioxus-ssr = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
omnibus-shared = { path = "../shared" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tower = "0.5"
