[package]
name = "omnibus"
version = "0.1.0"
edition = "2021"

# Unified Dioxus fullstack binary. Built twice by `dx serve`:
# - Once as native (features: `server`) — axum backend + SSR + DB
# - Once as WASM (features: `web`) — hydrated client
#
# All server-only deps are gated behind the `server` feature so the WASM
# build side doesn't try to compile sqlx/tokio/axum.

[dependencies]
dioxus = "0.7"

# Server-only deps — all optional and gated behind the `server` feature.
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["trace"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
serde_json = { version = "1", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"], optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }

omnibus-shared = { path = "../shared" }
# `features` here are forwarded via our own feature flags below. Leaving it
# bare means frontend compiles with no platform feature (components only).
omnibus-frontend = { path = "../frontend" }

[dev-dependencies]
tower = "0.5"

[features]
default = ["server"]
# Native server build: axum backend + SSR + DB. Also activates
# `omnibus-frontend/server` so server-function bodies compile in.
server = [
    "dep:axum",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:serde_json",
    "dep:sqlx",
    "dep:tokio",
    "dioxus/server",
    "omnibus-frontend/server",
]
# WASM client build (activated by `dx serve --platform web`).
web = ["dioxus/web", "omnibus-frontend/web"]
